--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "datomon/laravel-newebpay",
+    "name": "knckff-roychang/laravel-newebpay",
     "description": "台灣藍新金流(智付通)企業會員金流串接",
     "require": {
         "php": "^7.0.0"
     },
     "autoload": {
         "psr-4": {
-            "Datomon\\LaravelNewebpay\\": "src/app/"
+            "knckff-roychang\\LaravelNewebpay\\": "src/app/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Datomon\\LaravelNewebpay\\Providers\\AppServiceProvider"
+                "knckff-roychang\\LaravelNewebpay\\Providers\\AppServiceProvider"
             ]
         }
     },
@@ -20,6 +20,10 @@
         {
             "name": "Datomon",
             "email": "lcndance1999@gmail.com"
+        },
+        {
+            "name": "Roy Chang",
+            "email": "roy.chang@knckff.com"
         }
     ],
     "license": "MIT"
